# LORE

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  claude_research.md  docker-compose.yaml  gemini_research.md  gpt_research.md  pyproject.toml
configs/: crh_evaluation.yaml  datasets.yaml  eval_config.yaml  gepa_config.yaml  models.yaml  rl_config.yaml  skyrl_grpo.yaml  ultrainteract_evolution.yaml  verl_grpo.yaml
docker/: Dockerfile  Dockerfile.sandbox  sandbox_runner.py  seccomp-profile.json
evals/: __init__.py
evals/scorers/: __init__.py  aime_scorer.py  math_scorer.py  mcq_scorer.py
evals/tasks/: __init__.py  competition_math.py  math_reasoning.py  science_reasoning.py
scripts/: create_cot_comparison_dashboard.py  crh_eval_v6_sonnet.py  crh_eval_with_cot_elicitation.py  crh_stats_v6.py  crh_stats_v6_large.py  grpo_sweep.py  inspect_generations.py  launch_parallel.sh  log_crh_to_wandb.py  plot_crh_cot_elicitation.py  plot_n500_clean.py  plot_n500_distributions.py  plot_suspicion_distributions.py  prepare_skyrl_data.py  run_crh_eval_v6.py  run_evolution_v3.py  run_evolution_v4_larger.py  run_evolution_v5_unlimited.py  run_evolution_v6_notrunc.py  run_gepa.sh  run_transfer_eval.sh  slurm_evolution_v5.sh  slurm_evolution_v6.sh  slurm_grpo_accuracy.sh  slurm_grpo_full.sh  slurm_grpo_full_wandb.sh  slurm_grpo_progress.sh  slurm_grpo_smoke.sh  slurm_grpo_train.sh  slurm_skyrl_full.sh  slurm_skyrl_real.sh  slurm_skyrl_smoke.sh  slurm_skyrl_smoke_light.sh  train_skyrl.py  train_verl.py
scripts/sweep/: grpo_conservative.sh  grpo_deepseek.sh  grpo_high_kl.sh  grpo_high_lr.sh  grpo_low_temp.sh  grpo_many_gen.sh  grpo_no_kl.sh  grpo_qwen1.5b.sh  grpo_qwen3b.sh
src/: __init__.py  cli.py  constants.py
src/data/: __init__.py  gym_builder.py  loaders.py  ultrainteract.py
src/evaluation/: __init__.py  crh_evaluator.py  math_grader.py
src/models/: __init__.py  frontier_api.py  open_weights.py  text_extraction.py  types.py
src/monitors/: __init__.py  base.py  detection.py  ensemble.py  lindner_autorater.py
src/optimization/: __init__.py  base_optimizer.py  gepa.py  grg_mutations.py  mipro.py  promptbreeder.py  ultrainteract_gepa.py
src/rl/: __init__.py  config.py  data_pipeline.py  evaluation.py  grpo_trainer.py  reward.py  skyrl_data_pipeline.py  skyrl_rewards.py  skyrl_trainer.py  verl_data_pipeline.py  verl_rewards.py  verl_trainer.py
tests/: __init__.py  conftest.py  test_cli.py  test_refactoring.py
tests/test_evaluation/: test_math_grader.py
tests/test_models/: __init__.py  test_text_extraction.py
tests/test_optimization/: test_gepa.py
tests/test_rl/: __init__.py  test_skyrl.py
